chore(pickers): Prevent button text from being cut off

--- a/src/elements/content-picker/Footer.scss
+++ b/src/elements/content-picker/Footer.scss
@@ -19,6 +19,7 @@
 
         .btn-content {
             display: inline-block;
+            line-height: 13px;
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
